# Integrated-Magics

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: detours.cmake  headerlist.cmake  sourcelist.cmake
include/: SKSEMenuFramework.h
include/lib/: nanosvg.h
src/: Hooks.cpp  MagicAction.cpp  MagicAction.h  MagicConfig.cpp  MagicConfig.h  MagicConfigPath.h  MagicEquipSlots.h  MagicHooks.cpp  MagicHooks.h  MagicInput.cpp  MagicInput.h  MagicSelect.cpp  MagicSelect.h  MagicSlots.cpp  MagicSlots.h  MagicState.cpp  MagicState.h  MagicStrings.cpp  MagicStrings.h  PCH.h  SaveSpellDB.cpp  SaveSpellDB.h  SpellSettingsDB.cpp  SpellSettingsDB.h  UI_IntegratedMagic.cpp  UI_IntegratedMagic.h  plugin.cpp
src/Config/: Config.cpp  Config.h  ConfigPath.h  EquipSlots.h  MagicConfig.cpp  MagicSlots.cpp  MagicSlots.h  Slots.cpp  Slots.h  SpellType.cpp  SpellType.h
src/Detours/: detours.hpp
src/Input/: Assign.cpp  Assign.h  Eventfilter.cpp  Eventfilter.h  Exclusivepending.cpp  Exclusivepending.h  Hotkeycache.cpp  Hotkeycache.h  Hudtoggle.cpp  Hudtoggle.h  Input.cpp  Input.h  Inputinternal.h  Inputstate.cpp  Inputstate.h  MagicInput.cpp  Replaysystem.cpp  Replaysystem.h
src/Persistence/: SaveSpellDB.cpp  SaveSpellDB.h  SpellSettingsDB.cpp  SpellSettingsDB.h
src/State/: Action.cpp  Action.h  AnimListener.cpp  AnimListener.h  Assign.cpp  Assign.h  CastGuardEvents.h  Equipsink.cpp  Equipsink.h  InventoryUtil.cpp  InventoryUtil.h  MagicAction.cpp  MagicAction.h  MagicSelect.cpp  MagicState.cpp  MagicState.h  MagicStateLifecycle.cpp  MagicStatePump.cpp  MagicStateSlot.cpp  Spellclassify.h  State.cpp  State.h  SyntheticInput.cpp  SyntheticInput.h
src/UI/: FontLoader.h  HUD.cpp  HUD.h  HUD_IntegratedMagic.cpp  HUD_IntegratedMagic.h  Hoveredform.cpp  Hoveredform.h  HudManager.cpp  HudManager.h  HudState.h  HudTextUtil.h  MENU.cpp  MENU_IntegratedMagic.cpp  MENU_IntegratedMagic.h  MagicStrings.cpp  PolyFill.h  PopupDrawer.h  Popupdrawer.cpp  SlotAnimator.h  SlotDrawer.h  SlotLayout.h  Slotdrawer.cpp  Strings.cpp  StyleConfig.cpp  StyleConfig.h  TextureManager.cpp  TextureManager.h
